mdapipackage/objects/Teacher__c.object
<CustomObject>
    <fields>
        <fullName>Has_Active_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Active Contract?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_End_Date__c</fullName>
        <label>Job End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Start_Date__c</fullName>
        <label>Job Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fulltime</fullName>
                </value>
                <value>
                    <fullName>Parttime</fullName>
                </value>
                <value>
                    <fullName>Nightshift</fullName>
                </value>
                <value>
                    <fullName>Hourly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Newly Appointed</fullName>
                </value>
                <value>
                    <fullName>Experienced</fullName>
                </value>
                <value>
                    <fullName>Serving Notice</fullName>
                </value>
                <value>
                    <fullName>Contract Due</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Teacher</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Teacher Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teachers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>